# mesh-studio

./: .gitignore  MESH_EDITOR_RESEARCH.md  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes_ai.py  routes_chat_history.py  routes_compile.py  routes_editor.py  routes_sessions.py  routes_uploads.py  routes_users.py
backend/app/core/: config.py
backend/app/schemas/: ai.py  artifact.py  chat_history.py  compile.py  editor.py  session.py  upload.py
backend/app/services/: ai_service.py  artifact_registry_service.py  chat_history_service.py  code_change_service.py  compile_service.py  session_service.py  upload_service.py
backend/scripts/: compile_bear.ps1
backend/tests/: test_code_change_service.py  test_compile_service.py  test_editor_routes.py  test_uploads.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/[artifactId]/: page.tsx
frontend/app/chat-history/[chatId]/: page.tsx
frontend/public/premade/: cube.stl  pyramid.stl
frontend/src/: App.tsx
frontend/src/components/ui/: DisplayControls.tsx  HudPanel.tsx  README.md  select.tsx
frontend/src/components/viewport/: AxisCornerIndicator.tsx  AxisGizmo.tsx  EditorViewportCanvas.tsx  ModelStage.tsx  ViewportCanvas.tsx  editorTypes.ts  meshEditingUtils.ts
frontend/src/viewport/: AxisGizmo.tsx  InfiniteGrid.tsx  ModelStage.tsx  ViewportCanvas.tsx
